<resources>
    <string name="app_name">RaffaDNDM</string>
    <string name="photo">Photo</string>
    <string name="menu">Menu</string>
    <string name="gallery">Gallery</string>

    <string name="atri">atri</string>
    <string name="atri_date">Atri(TE)  01\-12\-2019  8:02 am</string>
    <string name="atri1_date">Atri(TE)  01\-12\-2019  8:12 am</string>
    <string name="atri2_date">Atri(TE)  01\-12\-2019  8:32 am</string>
    <string name="atri3_date">Atri(TE)  01\-12\-2019  8:57 am</string>
    <string name="atri4_date">Atri(TE)  01\-12\-2019  9:01 am</string>
    <string name="atri5_date">Atri(TE)  01\-12\-2019  8:53 am</string>

    <string name="burano">burano</string>
    <string name="burano_date">Burano(VE)  24\-09\-2019  10:43 am</string>
    <string name="burano1_date">Burano(VE)  24\-09\-2019  10:32 am</string>
    <string name="burano2_date">Burano(VE)  24\-09\-2019  10:53 am</string>
    <string name="burano3_date">Burano(VE)  24\-09\-2019  11:38 am</string>
    <string name="burano4_date">Burano(VE)  24\-09\-2019  02:44 pm</string>
    <string name="burano5_date">Burano(VE)  24\-09\-2019  02:49 pm</string>

    <string name="bardolino">bardolino</string>
    <string name="bardolino_date">Bardolino(VR)  29\-09\-2019  04:22 pm</string>
    <string name="bardolino1_date">Bardolino(VR)  28\-09\-2019  12:18 pm</string>
    <string name="bardolino2_date">Bardolino(VR)  29\-09\-2019  06:30 pm</string>
    <string name="bardolino3_date">Bardolino(VR)  28\-09\-2019  06:56 pm</string>
    <string name="bardolino4_date">Bardolino(VR)  29\-09\-2019  08:09 pm</string>
    <string name="bardolino5_date">Bardolino(VR)  28\-09\-2019  10:16 pm</string>
    <string name="bardolino6_date">Bardolino(VR)  29\-09\-2019  10:23 pm</string>
    <string name="bardolino7_date">Bardolino(VR)  28\-09\-2019  10:25 pm</string>
    <string name="bardolino8_date">Bardolino(VR)  29\-09\-2019  10:28 pm</string>
    <string name="bardolino9_date">Bardolino(VR)  28\-09\-2019  10:45 pm</string>
    <string name="bardolino10_date">Bardolino(VR)  28\-09\-2019  11:14 pm</string>
    <string name="bardolino11_date">Bardolino(VR)  28\-09\-2019  11:12 am</string>
    <string name="bardolino12_date">Bardolino(VR)  28\-09\-2019  11:42 am</string>

    <string name="padua">padua</string>
    <string name="padua_date">Padua(PD)  20\-10\-2019  06:56 am</string>
    <string name="padua1_date">Padua(PD)  16\-10\-2019  07:16 am</string>
    <string name="padua2_date">Padua(PD)  25\-10\-2019  04:56 pm</string>
    <string name="padua3_date">Padua(PD)  01\-11\-2019  08:50 am</string>
    <string name="padua4_date">Padua(PD)  01\-11\-2019  08:48 am</string>
    <string name="padua5_date">Padua(PD)  04\-12\-2019  08:13 am</string>
    <string name="padua6_date">Padua(PD)  04\-12\-2019  08:20 am</string>

    <string name="sanmartino">sanmartino</string>
    <string name="sanmartino_title">San Martino di Castrozza</string>
    <string name="sanmartino_date">San Martino di Castrozza(TN)  27\-02\-2020  06:40 pm</string>
    <string name="sanmartino1_date">San Martino di Castrozza(TN)  26\-02\-2020  04:07 pm</string>
    <string name="sanmartino2_date">San Martino di Castrozza(TN)  27\-02\-2020  12:45 pm</string>
    <string name="sanmartino3_date">San Martino di Castrozza(TN)  28\-02\-2020  11:42 am</string>
    <string name="sanmartino4_date">San Martino di Castrozza(TN)  28\-02\-2020  12:23 pm</string>
    <string name="sanmartino5_date">San Martino di Castrozza(TN)  28\-02\-2020  12:31 pm</string>
    <string name="sanmartino6_date">San Martino di Castrozza(TN)  28\-02\-2020  12:34 pm</string>
    <string name="sanmartino7_date">San Martino di Castrozza(TN)  28\-02\-2020  12:36 pm</string>
    <string name="sanmartino8_date">San Martino di Castrozza(TN)  28\-02\-2020  12:44 pm</string>
    <string name="sanmartino9_date">San Martino di Castrozza(TN)  28\-02\-2020  01:09 pm</string>
    <string name="sanmartino10_date">San Martino di Castrozza(TN)  28\-02\-2020  01:25 pm</string>
    <string name="sanmartino11_date">San Martino di Castrozza(TN)  28\-02\-2020  01:33 pm</string>
    <string name="sanmartino12_date">San Martino di Castrozza(TN)  28\-02\-2020  06:53 pm</string>
    <string name="sanmartino13_date">San Martino di Castrozza(TN)  29\-02\-2020  01:57 pm</string>
    <string name="sanmartino14_date">San Martino di Castrozza(TN)  29\-02\-2020  03:59 pm</string>
    <string name="sanmartino15_date">San Martino di Castrozza(TN)  29\-02\-2020  04:37 pm</string>
    <string name="sanmartino16_date">San Martino di Castrozza(TN)  29\-02\-2020  05:44 pm</string>
    <string name="sanmartino17_date">San Martino di Castrozza(TN)  29\-02\-2020  05:21 pm</string>
    <string name="sanmartino18_date">San Martino di Castrozza(TN)  29\-02\-2020  05:50 pm</string>
    <string name="sanmartino19_date">San Martino di Castrozza(TN)  29\-02\-2020  06:14 pm</string>

    <string name="info">Info</string>
    <string name="author"><b>Author: Raffaele Di Nardo Di Maio</b> \n </string>

    <string name="project_info">This application is composed by different sections:</string>
    <string name="photo_info">It shows some photos made by the author Raffaele during holidays.</string>
    <string name="music_info">It\'s dedicated to Three Notes. Three Notes is a band, that had played in many places during 2013-2014.\n
        It was composed by Raffaele Di Nardo Di Maio at lead guitar (acoustic), Giuseppe Di Ridolfo at solo guitar, Ilenia De Sanctis at voice, Ilaria Nallira at violin.\n
        In this section, you can find photos of some concerts and some songs.
    </string>
    <string name="github_info">It\'s dedicated to all the repositories made by Raffaele and uploaded on Github.</string>


    <string name="project_source">The source code of this project is contained in the following Github Repository</string>
    <string name="project_url">https://github.com/RaffaDNDM/Notes</string>

    <string name="other_projects">There are other projects and programs made by Raffaele. You can see them by clicking on the following buttons: </string>
    <string name="ml_button">Machine Learning</string>
    <string name="ml_description">Machine Learning applications, programmed during the university course.</string>
    <string name="ml_url">https://github.com/RaffaDNDM/Machine-Learning</string>

    <string name="bigData_button">Big Data</string>
    <string name="bigData_description">Applications of Big Data algorithm using Spark in Java.</string>
    <string name="bigData_url">https://github.com/RaffaDNDM/Big-Data-Computing</string>

    <string name="os_button">Operating Systems</string>
    <string name="os_description">Holt graph analysis for deadlock in C and multithreading management (Semaphore, Hoare\'s Monitor, Java Monitor, Conditional Region) in Java.</string>
    <string name="os_url">https://github.com/RaffaDNDM/Operating-Systems</string>

    <string name="parallel_button">Knuth-Morris-Pratt</string>
    <string name="parallel_description">Parallel implementation of Knuth-Morris-Pratt algorithm using MPI Protocol of C on Power 7.</string>
    <string name="parallel_url">https://github.com/RaffaDNDM/Parallel-Knuth-Morris-Pratt</string>

    <string name="cyber_button">Cyber Security</string>
    <string name="cyber_description">Implementation of some cryptography, compression algorithms and solutions of some CTFs.</string>
    <string name="cyber_url">https://github.com/RaffaDNDM/Cyber-Security</string>

    <string name="c_button">C Lab</string>
    <string name="c_description">Some small exercises and simulation of electronic components shopping for a company.</string>
    <string name="c_url">https://github.com/RaffaDNDM/C-lab</string>

    <string name="db_button">AutoChef</string>
    <string name="db_description">Phases of creation of a Database, its implementation in PostgreSQL and simple APP layer in Java</string>
    <string name="db_url">https://github.com/RaffaDNDM/AutoChef</string>

    <string name="geometry_button">Coding</string>
    <string name="geometry_description">Implementation of geometry algorithms.</string>
    <string name="geometry_url">https://github.com/RaffaDNDM/Coding</string>

    <string name="javaGUI_button">TicTacToe</string>
    <string name="javaGUI_description">Implementation of TicTacToe game through Java GUI.</string>
    <string name="javaGUI_url">https://github.com/RaffaDNDM/TicTacToe</string>

    <string name="bot_button">QBot</string>
    <string name="bot_description">Telegram bot for generation and decoding of QRcodes.</string>
    <string name="bot_url">https://github.com/RaffaDNDM/Qbot</string>

    <string name="or2_url">https://github.com/RaffaDNDM/Operational-Research-2</string>
    <string name="or2_button">Operational Research 2</string>
    <string name="or2_description">Travelling Salesman Problem solutions</string>

    <string name="pro_url">https://github.com/RaffaDNDM/Pro-Notes</string>
    <string name="pro_button">ProNotes</string>
    <string name="pro_description">Android app for notes about programming and work utilities</string>

    <string name="music">Music</string>
    <string name="github">Github</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>

    <string name="song0">Shiver</string>
    <string name="song1">Na Na Na</string>
    <string name="song2">Stand by me</string>
    <string name="song3">Zombie</string>
    <string name="band">Three Notes</string>
    <string name="next">next</string>
    <string name="prev">prev</string>
    <string name="song">song</string>
    <string name="live">Live</string>

    <string name="posters">Posters</string>
    <string name="poster1_date">27-04-2013</string>
    <string name="poster2_date">10-05-2013</string>
    <string name="poster3_date">25-05-2013</string>
    <string name="poster4_date">16-06-2013</string>
    <string name="poster5_date">07-08-2013</string>
    <string name="poster6_date">09-08-2013</string>
    <string name="poster7_date">10-08-2013</string>
    <string name="poster8_date">12-08-2013</string>

    <string name="semi">semi</string>
    <string name="semi_title">Part 1</string>
    <string name="lido">lido</string>
    <string name="lido_title">Part 2</string>
    <string name="summer">summer</string>
    <string name="summer_title">Part 3</string>
    <string name="pub">pub</string>
    <string name="pub_title">Part 4</string>

    <string name="euphoria_info">Euphoria, Pescara (PE) 19-01-2013</string>
    <string name="semi_info">Semifinal of Voce del Cuore, Roseto degli Abruzzi (TE) 27-06-2013</string>
    <string name="lido_info">Lido d\'Abruzzo, Roseto degli Abruzzi (TE) 01-07-2013</string>
    <string name="nidoape_info">Nido d\'Ape, Silvi Marina (TE) 16-06-2013</string>
    <string name="allin_info">All In Bar, Roseto degli Abruzzi (TE) 02-07-2013</string>
    <string name="summer_info">Summer Voice Contest, Pineto (TE) 22-08-2013</string>
    <string name="koko_info">Fermo Posta Cafè, Atri (TE) 10-05-2013</string>
    <string name="koko2_info">Fermo Posta Cafè, Atri (TE) 10-08-2013</string>

    <string name="cn_url">https://github.com/RaffaDNDM/Computer-Networks</string>
    <string name="cn_button">Computer Networks</string>
    <string name="cn_description">Computer Networks applications of protocols in C.</string>
    <string name="cv_url">https://github.com/RaffaDNDM/Computer-Vision</string>
    <string name="cv_button">Computer Vision</string>
    <string name="cv_description">Application of Computer Vision algorithms in C++.</string>

</resources>
