<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/burano"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/burano_date"
                android:onClick="onPhoto"
                app:srcCompat="@drawable/burano" />

            <ImageView
                android:id="@+id/burano1"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/burano1_date"
                android:onClick="onPhoto"
                app:srcCompat="@drawable/burano1" />

            <ImageView
                android:id="@+id/burano2"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/burano2_date"
                android:onClick="onPhoto"
                app:srcCompat="@drawable/burano2" />

            <ImageView
                android:id="@+id/burano3"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="0dp"
                android:contentDescription="@string/burano3_date"
                android:onClick="onPhoto"
                app:srcCompat="@drawable/burano3" />

            <ImageView
                android:id="@+id/burano4"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="0dp"
                android:contentDescription="@string/burano4_date"
                android:onClick="onPhoto"
                app:srcCompat="@drawable/burano4" />

            <ImageView
                android:id="@+id/burano5"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:contentDescription="@string/burano5_date"
                android:onClick="onPhoto"
                app:srcCompat="@drawable/burano5" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
