<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/burano"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/burano"
                android:onClick="photoSection"
                app:srcCompat="@drawable/burano" />

            <ImageView
                android:id="@+id/bardolino"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="0dp"
                android:onClick="photoSection"
                android:contentDescription="@string/bardolino"
                app:srcCompat="@drawable/bardolino" />

            <ImageView
                android:id="@+id/atri"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="0dp"
                android:onClick="photoSection"
                android:contentDescription="@string/atri"
                app:srcCompat="@drawable/atri" />

            <ImageView
                android:id="@+id/padua"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="0dp"
                android:contentDescription="@string/padua"
                android:onClick="photoSection"
                app:srcCompat="@drawable/padua" />

            <ImageView
                android:id="@+id/sanmartino"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/sanmartino"
                android:onClick="photoSection"
                app:srcCompat="@drawable/sanmartino" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
